--- a/src/Navbar/NavbarC.css
+++ b/src/Navbar/NavbarC.css
@@ -1,48 +1,62 @@
+.bg-body{
+  width: 100% !important;
+  padding:0% ;
+  margin: 0px auto; 
+}
 .nav_header
 {
-    color: white;
-    font-size: 32px;
-    font-weight: 700;
-    margin-left: 5px;
+  color: white;
 }
-.bg-body {
-  width: 100% !important;
-  padding: 0%;
-  margin: 0px auto;
+.b{
+  font-size: 20px;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  color:#fff !important;
   
 }
-.b {
+#collasible-nav-dropdown{
   font-size: 20px;
-  color: #fff !important;
-}
-#collasible-nav-dropdown {
-  font-size: 20px;
-  color: #fff !important;
-  background-color: #3E005B;
-}
-#new {
-  background-color: #3E005B;
-}
-.back {
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  color:#fff !important;
   background-color: #3E005B !important;
-  color: #fff !important;
+  
 }
-.back:hover {
-  color: #E4A5FF !important;
+
+.collasible-nav-dropdown{
+  background: #3E005B !important; 
+  margin-top: 0px !important;
 }
-.image {
-  height: 60px;
-  width: 60px;
+.ba{
+ margin-right: 50px;
 }
-.bg {
-  background-color: #3E005B;
+
+.back{
+  background-color: #3E005B !important;
+  color:#fff !important;
+  font-size: 20px;
+  font-weight: 500;
+
+}
+.back:hover{
+  color:#E4A5FF !important;
+}
+.image{
+  height: 70px;
+  width:70px;
+}
+.bg{
+  background-color:#3E005B;
+  font-family:"Arial";
   width: 100% !important;
   background-size: 100%;
   position: relative;
   min-height: 12vh;
+  font-weight: bold;
   font-size: 20px;
   display: flex;
 }
-.b:hover {
-  color:  #E4A5FF !important ;
+.b:hover{
+color:#E4A5FF !important ;
+}
+.dropdown-menu{
+background-color: #3E005B !important;
 }
