--- a/src/Navbar/NavbarC.css
+++ b/src/Navbar/NavbarC.css
@@ -60,3 +60,8 @@ color:#E4A5FF !important ;
 .dropdown-menu{
 background-color: #3E005B !important;
 }
+.Link
+{
+  text-decoration: none;
+  color: #ffffff;
+}
