--- a/src/Profile/Myevents.css
+++ b/src/Profile/Myevents.css
@@ -7,6 +7,18 @@
     align-items: center;
     align-content: center;
     margin-top: 20px;
+    row-gap: 20px;
+}
+.headers
+{
+    text-align: center;
+    font-size: 55px;
+    color: #3E005B;
+    margin-top: 20px;
+}
+.headers h1
+{
+    font-weight: 700;
 }
 .myevents
 {
@@ -21,15 +33,23 @@
 {
     text-align: center;
     margin-bottom: 15px;
+    font-weight: 700;
+    color: #3E005B;
+    margin-bottom: 20px;
 }
 .myevent
 {
     display: grid;
-    grid-template-columns: 33% 33% 33%;
+    grid-template-columns: 20% 33% 45%;
     justify-items: center;
     justify-content: center;
     align-items: center;
     align-content: center;
+}
+.myevent h2
+{
+    font-size: 32px;
+    font-weight: 700;
 }
 .status
 {
@@ -63,4 +83,23 @@
 {
     background-color: #d30404;
     box-shadow: 2px 2px 2px 2px rgb(114, 0, 0);
+}
+
+.app_status1 h1
+{
+    color: rgb(143, 2, 2);
+    margin-top: 10px;
+    margin-bottom: 10px;
+} 
+.accepted h1
+{
+    color: rgb(2, 168, 35);
+    font-weight: 700;
+    text-align: center;
+}
+.rejected h1
+{
+    color:  rgb(143, 2, 2);
+    font-weight: 700;
+    text-align: center;
 }
